recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:4: error: not found: value lenght
  avance (lenght);
          ^Tree:5: error: not found: value angle
  gauche(180-angle)
             ^Tree:12: error: not found: value retourne
    retourne(lenght)
    ^Tree:12: error: not found: value lenght
    retourne(lenght)
             ^