recursion.logo.tree.Tree.scala.code
def retourEnPlace(length:Double) {
  leveCrayon();
  gauche(180);
  avance (lenght);
  gauche(180-angle)
  baisseCrayon();
}
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps!=0) {
  	avance(length);
    gauche(angle);
    retourne(lenght)
    tree(steps-1, length*shrink, angle, shrink);
    droite(angle);
    tree(steps-1, length*shrink, angle, shrink);

  } 
  
  
}